Product Grid: Layout break issue on astra is fixed

--- a/src/css/view/product-grid.scss
+++ b/src/css/view/product-grid.scss
@@ -71,7 +71,9 @@
                     }
                 }
             }
-
+            .ast-on-card-button.ast-onsale-card{
+                display: none !important;
+            }
             li.product {
                 width: 100%;
             }
